// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DisambiguatedProfileView > renders the default state 1`] = `
<div>
  <div
    class="disambiguatedProfile"
  >
    <span
      class="disambiguatedProfile_displayName"
      data-part="display-name"
      dir="auto"
    >
      Alice
    </span>
  </div>
</div>
`;

exports[`DisambiguatedProfileView > renders the full example 1`] = `
<div>
  <div
    class="disambiguatedProfile"
    title="Eve (@eve:matrix.org)"
  >
    <span
      class="mx_Username_color5 disambiguatedProfile_displayName"
      data-part="display-name"
      dir="auto"
    >
      Eve
    </span>
    <span
      class="disambiguatedProfile_mxid"
      data-part="mxid"
    >
      @eve:matrix.org
    </span>
  </div>
</div>
`;

exports[`DisambiguatedProfileView > renders with MXID for disambiguation 1`] = `
<div>
  <div
    class="disambiguatedProfile"
  >
    <span
      class="mx_Username_color1 disambiguatedProfile_displayName"
      data-part="display-name"
      dir="auto"
    >
      Alice
    </span>
    <span
      class="disambiguatedProfile_mxid"
      data-part="mxid"
    >
      @alice:example.org
    </span>
  </div>
</div>
`;

exports[`DisambiguatedProfileView > renders with color class 1`] = `
<div>
  <div
    class="disambiguatedProfile"
  >
    <span
      class="mx_Username_color3 disambiguatedProfile_displayName"
      data-part="display-name"
      dir="auto"
    >
      Bob
    </span>
  </div>
</div>
`;

exports[`DisambiguatedProfileView > renders with emphasized display name 1`] = `
<div>
  <div
    class="disambiguatedProfile"
  >
    <span
      class="disambiguatedProfile_displayName"
      data-part="display-name"
      dir="auto"
    >
      Charlie
    </span>
  </div>
</div>
`;

exports[`DisambiguatedProfileView > renders with tooltip 1`] = `
<div>
  <div
    class="disambiguatedProfile"
    title="Diana (@diana:example.org)"
  >
    <span
      class="disambiguatedProfile_displayName"
      data-part="display-name"
      dir="auto"
    >
      Diana
    </span>
  </div>
</div>
`;
